Fix no spacing at bottom of changelog dialog in mobile Safari
Other Changes:
- Remove console logs that are no longer needed
- Update README

--- a/src/styles/components/dialog.css
+++ b/src/styles/components/dialog.css
@@ -41,6 +41,10 @@
     position: relative;
 }
 
+.dialog > div.dialog-content > div.dialog-text > *:last-child { 
+    padding: 0 0 16px 0;
+}
+
 .dialog button.close {
     position: absolute;
     top: 0;
